# typedjs

./: .gitignore  LICENSE  README.md  example.tjs  typedjs.cabal  typescript.cabal
app/: Cli.hs  Main.hs
src/: Ast.hs  Cli.hs  Desuger.hs  Diagnostic.hs  Driver.hs  Emit.hs  JsIr.hs  Parser.hs  Typecheck.hs
test/: Main.hs
test/e2e/fail/001-type-mismatch/: expected.stderr  input.tjs
test/e2e/fail/002-type-alias-mismatch/: expected.stderr  input.tjs
test/e2e/fail/003-unbound-variable/: expected.stderr  input.tjs
test/e2e/fail/004-missing-field/: expected.stderr  input.tjs
test/e2e/fail/005-duplicate-binding/: expected.stderr  input.tjs
test/e2e/fail/006-immutable-assign/: expected.stderr  input.tjs
test/e2e/fail/007-undefined-type/: expected.stderr  input.tjs
test/e2e/fail/008-duplicate-type/: expected.stderr  input.tjs
test/e2e/fail/009-type-arity/: expected.stderr  input.tjs
test/e2e/fail/010-type-arity-lambda/: expected.stderr  input.tjs
test/e2e/fail/011-unbound-function/: expected.stderr  input.tjs
test/e2e/fail/012-non-exhaustive-match/: expected.stderr  input.tjs
test/e2e/fail/013-unknown-variant/: expected.stderr  input.tjs
test/e2e/fail/014-unknown-enum/: expected.stderr  input.tjs
test/e2e/fail/015-variant-arity-mismatch/: expected.stderr  input.tjs
test/e2e/pass/001-assignment/: expected.js  input.tjs
test/e2e/pass/002-arithmatic/: expected.js  input.tjs
test/e2e/pass/003-lambdas/: expected.js  expected.out  input.tjs
test/e2e/pass/004-functions/: expected.js  expected.out  input.tjs
test/e2e/pass/005-objects/: expected.js  expected.out  input.tjs
test/e2e/pass/006-control-flow/: expected.js  expected.out  input.tjs
test/e2e/pass/007-type-alias/: expected.js  expected.out  input.tjs
test/e2e/pass/008-arrays/: expected.js  expected.out  input.tjs
test/e2e/pass/009-logic-operators/: expected.js  expected.out  input.tjs
test/e2e/pass/010-enum-basic/: expected.js  expected.out  input.tjs
test/e2e/pass/011-enum-payload/: expected.js  input.tjs
test/e2e/pass/012-enum-generic/: expected.js  expected.out  input.tjs
