cabal-version:      3.0
name:               typedjs
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Dimitrios Papakonstantinou
maintainer:         papakonstantinou.dm@gmail.com
-- copyright:
category:           Language
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Werror -O2

library
    import:           warnings
    exposed-modules:  Ast,
                      Parser,
                      Typecheck,
                      Diagnostic,
                      JsIr,
                      Desuger,
                      Emit,
                      Driver
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0,
                      megaparsec,
                      text,
                      containers,
                      mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable typedjsc 
    import:           warnings
    main-is:          Main.hs
    other-modules:    Cli
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        typedjs,
        text,
        optparse-applicative

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite typedjs-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        typedjs,
        tasty,
        tasty-golden,
        filepath,
        directory,
        typed-process,
        bytestring,
        text
