cabal-version:      3.0
name:               typedjs
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Dimitrios Papakonstantinou
category:           Language
build-type:         Simple

common flags
    ghc-options: -Wall -Werror -O2

library
    import:           flags 
    exposed-modules:  Driver,
                      Cli
    other-modules:    Ast,
                      Parser,
                      Typecheck,
                      Diagnostic,
                      JsIr,
                      Desuger,
                      Emit,
    build-depends:    base ^>=4.18.3.0,
                      megaparsec,
                      text,
                      containers,
                      mtl,
                      optparse-applicative
    hs-source-dirs:   src
    default-language: Haskell2010

executable typedjsc 
    import:           flags
    main-is:          Main.hs
    -- other-modules:    
    build-depends:
        base ^>=4.18.3.0,
        typedjs,
        text,
        optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite typedjs-test
    import:           flags
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        typedjs,
        tasty,
        tasty-golden,
        filepath,
        directory,
        typed-process,
        bytestring,
        text
