cabal-version:      3.0
name:               typescript
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Dimitrios Papakonstantinou
maintainer:         papakonstantinou.dm@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Ast 
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0,
                      megaparsec,
                      text
    hs-source-dirs:   src
    default-language: Haskell2010

executable typescript
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        typescript

    hs-source-dirs:   app
    default-language: Haskell2010
